kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-app-ingress
  namespace: demo-app

  labels:
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/instance: demo
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: multi-cloud-kubernetes-platform
    app.kubernetes.io/managed-by: kubectl

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: demo.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: demo-app-service
                port:
                  number: 80
